--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:latest
+    image: postgres:alpine
     environment:
       - POSTGRES_PASSWORD=postgres
     expose:
